parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BOOL
    COLON
    COMMENT
    CTEB
    CTEC
    DECREMENT
    DIVEQUAL
    ELSE
    FALSE
    INCREMENT
    MINUSEQUAL
    PERIOD
    PLUSEQUAL
    START
    TIMESEQUAL
    TO
    TRUE

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAMA ID SEMI bloque main
Rule 2     main -> MAIN bloque_use
Rule 3     bloque_use -> LBRACE bloque RBRACE
Rule 4     bloque -> estatuto bloque
Rule 5     bloque -> empty
Rule 6     estatuto -> asigna
Rule 7     estatuto -> asignavar
Rule 8     estatuto -> asignaarr
Rule 9     estatuto -> vararr
Rule 10    estatuto -> var
Rule 11    estatuto -> func
Rule 12    estatuto -> ifelse
Rule 13    estatuto -> while
Rule 14    estatuto -> forloop
Rule 15    estatuto -> write
Rule 16    estatuto -> read
Rule 17    estatuto -> fun_esp
Rule 18    estatuto -> cvar
Rule 19    estatuto -> cfunc
Rule 20    var -> type ID SEMI
Rule 21    type -> INT
Rule 22    type -> FLOAT
Rule 23    type -> CHAR
Rule 24    asigna -> ID EQUALS lit SEMI
Rule 25    asignavar -> ID EQUALS expr SEMI
Rule 26    lit -> CTEI
Rule 27    lit -> CTEF
Rule 28    write -> OUT LPAREN write_aux RPAREN SEMI
Rule 29    write_aux -> write_aux2
Rule 30    write_aux -> write_aux2 COMMA write_aux
Rule 31    write_aux2 -> cvar
Rule 32    write_aux2 -> LETRERO
Rule 33    forloop -> FOR asignavar forJump texp forQuad DO bloque_use fill_for
Rule 34    forJump -> <empty>
Rule 35    forQuad -> <empty>
Rule 36    fill_for -> <empty>
Rule 37    ifelse -> IF texp gotoQuadIf THEN bloque_use fill_if
Rule 38    gotoQuadIf -> <empty>
Rule 39    fill_if -> <empty>
Rule 40    while -> WHILE gotoQuadWhile LPAREN aexp RPAREN gotofQuadWhile DO bloque_use fill_while
Rule 41    gotoQuadWhile -> <empty>
Rule 42    gotofQuadWhile -> <empty>
Rule 43    fill_while -> <empty>
Rule 44    cvar -> ID
Rule 45    cvar -> ID LBRACKET expr RBRACKET
Rule 46    vararr -> type ID LBRACKET lit RBRACKET SEMI
Rule 47    vararr -> type ID LBRACKET expr RBRACKET SEMI
Rule 48    asignaarr -> ID LBRACKET expr RBRACKET EQUALS expr SEMI
Rule 49    read -> GET LPAREN read_aux RPAREN
Rule 50    read_aux -> ID
Rule 51    read_aux -> ID COMMA read_aux
Rule 52    body2 -> LBRACE bloque end RBRACE
Rule 53    end -> <empty>
Rule 54    body1 -> LBRACE bloque RETURN RBRACE
Rule 55    aexp -> texp
Rule 56    aexp -> texp AND texp
Rule 57    aexp -> texp OR texp
Rule 58    texp -> expr
Rule 59    texp -> expr LT expr
Rule 60    texp -> expr GT expr
Rule 61    texp -> expr LE expr
Rule 62    texp -> expr GE expr
Rule 63    texp -> expr EQ expr
Rule 64    texp -> expr NE expr
Rule 65    expr -> term
Rule 66    expr -> expr PLUS term
Rule 67    expr -> expr MINUS term
Rule 68    term -> fact
Rule 69    term -> term TIMES fact
Rule 70    term -> term DIVIDE fact
Rule 71    fact -> LPAREN aexp RPAREN
Rule 72    fact -> lit
Rule 73    fact -> cvar
Rule 74    fact -> cfunc
Rule 75    cfunc -> ID LPAREN cvar RPAREN SEMI
Rule 76    cfunc -> ID LPAREN RPAREN SEMI
Rule 77    func -> FUNCTION type ID eraQuad param body1 fillFunc
Rule 78    func -> FUNCTION VOID ID eraQuad param body2 fillFunc
Rule 79    funcVar -> type ID
Rule 80    eraQuad -> <empty>
Rule 81    fillFunc -> <empty>
Rule 82    param -> LPAREN RPAREN
Rule 83    param -> LPAREN param_aux RPAREN
Rule 84    param_aux -> funcVar
Rule 85    param_aux -> funcVar COMMA param_aux
Rule 86    fun_esp -> draw_line
Rule 87    endfunc -> <empty>
Rule 88    draw_line -> DRAW CTEI CTEI CTEI CTEI
Rule 89    empty -> <empty>

Terminals, with rules where they appear

AND                  : 56
BOOL                 : 
CHAR                 : 23
COLON                : 
COMMA                : 30 51 85
COMMENT              : 
CTEB                 : 
CTEC                 : 
CTEF                 : 27
CTEI                 : 26 88 88 88 88
DECREMENT            : 
DIVEQUAL             : 
DIVIDE               : 70
DO                   : 33 40
DRAW                 : 88
ELSE                 : 
EQ                   : 63
EQUALS               : 24 25 48
FALSE                : 
FLOAT                : 22
FOR                  : 33
FUNCTION             : 77 78
GE                   : 62
GET                  : 49
GT                   : 60
ID                   : 1 20 24 25 44 45 46 47 48 50 51 75 76 77 78 79
IF                   : 37
INCREMENT            : 
INT                  : 21
LBRACE               : 3 52 54
LBRACKET             : 45 46 47 48
LE                   : 61
LETRERO              : 32
LPAREN               : 28 40 49 71 75 76 82 83
LT                   : 59
MAIN                 : 2
MINUS                : 67
MINUSEQUAL           : 
NE                   : 64
OR                   : 57
OUT                  : 28
PERIOD               : 
PLUS                 : 66
PLUSEQUAL            : 
PROGRAMA             : 1
RBRACE               : 3 52 54
RBRACKET             : 45 46 47 48
RETURN               : 54
RPAREN               : 28 40 49 71 75 76 82 83
SEMI                 : 1 20 24 25 28 46 47 48 75 76
START                : 
THEN                 : 37
TIMES                : 69
TIMESEQUAL           : 
TO                   : 
TRUE                 : 
VOID                 : 78
WHILE                : 40
error                : 

Nonterminals, with rules where they appear

aexp                 : 40 71
asigna               : 6
asignaarr            : 8
asignavar            : 7 33
bloque               : 1 3 4 52 54
bloque_use           : 2 33 37 40
body1                : 77
body2                : 78
cfunc                : 19 74
cvar                 : 18 31 73 75
draw_line            : 86
empty                : 5
end                  : 52
endfunc              : 
eraQuad              : 77 78
estatuto             : 4
expr                 : 25 45 47 48 48 58 59 59 60 60 61 61 62 62 63 63 64 64 66 67
fact                 : 68 69 70
fillFunc             : 77 78
fill_for             : 33
fill_if              : 37
fill_while           : 40
forJump              : 33
forQuad              : 33
forloop              : 14
fun_esp              : 17
func                 : 11
funcVar              : 84 85
gotoQuadIf           : 37
gotoQuadWhile        : 40
gotofQuadWhile       : 40
ifelse               : 12
lit                  : 24 46 72
main                 : 1
param                : 77 78
param_aux            : 83 85
programa             : 0
read                 : 16
read_aux             : 49 51
term                 : 65 66 67 69 70
texp                 : 33 37 55 56 56 57 57
type                 : 20 46 47 77 79
var                  : 10
vararr               : 9
while                : 13
write                : 15
write_aux            : 28 30
write_aux2           : 29 30

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAMA ID SEMI bloque main

    PROGRAMA        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAMA . ID SEMI bloque main

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAMA ID . SEMI bloque main

    SEMI            shift and go to state 4


state 4

    (1) programa -> PROGRAMA ID SEMI . bloque main
    (4) bloque -> . estatuto bloque
    (5) bloque -> . empty
    (6) estatuto -> . asigna
    (7) estatuto -> . asignavar
    (8) estatuto -> . asignaarr
    (9) estatuto -> . vararr
    (10) estatuto -> . var
    (11) estatuto -> . func
    (12) estatuto -> . ifelse
    (13) estatuto -> . while
    (14) estatuto -> . forloop
    (15) estatuto -> . write
    (16) estatuto -> . read
    (17) estatuto -> . fun_esp
    (18) estatuto -> . cvar
    (19) estatuto -> . cfunc
    (89) empty -> .
    (24) asigna -> . ID EQUALS lit SEMI
    (25) asignavar -> . ID EQUALS expr SEMI
    (48) asignaarr -> . ID LBRACKET expr RBRACKET EQUALS expr SEMI
    (46) vararr -> . type ID LBRACKET lit RBRACKET SEMI
    (47) vararr -> . type ID LBRACKET expr RBRACKET SEMI
    (20) var -> . type ID SEMI
    (77) func -> . FUNCTION type ID eraQuad param body1 fillFunc
    (78) func -> . FUNCTION VOID ID eraQuad param body2 fillFunc
    (37) ifelse -> . IF texp gotoQuadIf THEN bloque_use fill_if
    (40) while -> . WHILE gotoQuadWhile LPAREN aexp RPAREN gotofQuadWhile DO bloque_use fill_while
    (33) forloop -> . FOR asignavar forJump texp forQuad DO bloque_use fill_for
    (28) write -> . OUT LPAREN write_aux RPAREN SEMI
    (49) read -> . GET LPAREN read_aux RPAREN
    (86) fun_esp -> . draw_line
    (44) cvar -> . ID
    (45) cvar -> . ID LBRACKET expr RBRACKET
    (75) cfunc -> . ID LPAREN cvar RPAREN SEMI
    (76) cfunc -> . ID LPAREN RPAREN SEMI
    (21) type -> . INT
    (22) type -> . FLOAT
    (23) type -> . CHAR
    (88) draw_line -> . DRAW CTEI CTEI CTEI CTEI

    MAIN            reduce using rule 89 (empty -> .)
    ID              shift and go to state 5
    FUNCTION        shift and go to state 24
    IF              shift and go to state 25
    WHILE           shift and go to state 26
    FOR             shift and go to state 27
    OUT             shift and go to state 28
    GET             shift and go to state 29
    INT             shift and go to state 31
    FLOAT           shift and go to state 32
    CHAR            shift and go to state 33
    DRAW            shift and go to state 34

    bloque                         shift and go to state 6
    estatuto                       shift and go to state 7
    empty                          shift and go to state 8
    asigna                         shift and go to state 9
    asignavar                      shift and go to state 10
    asignaarr                      shift and go to state 11
    vararr                         shift and go to state 12
    var                            shift and go to state 13
    func                           shift and go to state 14
    ifelse                         shift and go to state 15
    while                          shift and go to state 16
    forloop                        shift and go to state 17
    write                          shift and go to state 18
    read                           shift and go to state 19
    fun_esp                        shift and go to state 20
    cvar                           shift and go to state 21
    cfunc                          shift and go to state 22
    type                           shift and go to state 23
    draw_line                      shift and go to state 30

state 5

    (24) asigna -> ID . EQUALS lit SEMI
    (25) asignavar -> ID . EQUALS expr SEMI
    (48) asignaarr -> ID . LBRACKET expr RBRACKET EQUALS expr SEMI
    (44) cvar -> ID .
    (45) cvar -> ID . LBRACKET expr RBRACKET
    (75) cfunc -> ID . LPAREN cvar RPAREN SEMI
    (76) cfunc -> ID . LPAREN RPAREN SEMI

    EQUALS          shift and go to state 35
    LBRACKET        shift and go to state 36
    ID              reduce using rule 44 (cvar -> ID .)
    FUNCTION        reduce using rule 44 (cvar -> ID .)
    IF              reduce using rule 44 (cvar -> ID .)
    WHILE           reduce using rule 44 (cvar -> ID .)
    FOR             reduce using rule 44 (cvar -> ID .)
    OUT             reduce using rule 44 (cvar -> ID .)
    GET             reduce using rule 44 (cvar -> ID .)
    INT             reduce using rule 44 (cvar -> ID .)
    FLOAT           reduce using rule 44 (cvar -> ID .)
    CHAR            reduce using rule 44 (cvar -> ID .)
    DRAW            reduce using rule 44 (cvar -> ID .)
    MAIN            reduce using rule 44 (cvar -> ID .)
    RBRACE          reduce using rule 44 (cvar -> ID .)
    RETURN          reduce using rule 44 (cvar -> ID .)
    LPAREN          shift and go to state 37


state 6

    (1) programa -> PROGRAMA ID SEMI bloque . main
    (2) main -> . MAIN bloque_use

    MAIN            shift and go to state 39

    main                           shift and go to state 38

state 7

    (4) bloque -> estatuto . bloque
    (4) bloque -> . estatuto bloque
    (5) bloque -> . empty
    (6) estatuto -> . asigna
    (7) estatuto -> . asignavar
    (8) estatuto -> . asignaarr
    (9) estatuto -> . vararr
    (10) estatuto -> . var
    (11) estatuto -> . func
    (12) estatuto -> . ifelse
    (13) estatuto -> . while
    (14) estatuto -> . forloop
    (15) estatuto -> . write
    (16) estatuto -> . read
    (17) estatuto -> . fun_esp
    (18) estatuto -> . cvar
    (19) estatuto -> . cfunc
    (89) empty -> .
    (24) asigna -> . ID EQUALS lit SEMI
    (25) asignavar -> . ID EQUALS expr SEMI
    (48) asignaarr -> . ID LBRACKET expr RBRACKET EQUALS expr SEMI
    (46) vararr -> . type ID LBRACKET lit RBRACKET SEMI
    (47) vararr -> . type ID LBRACKET expr RBRACKET SEMI
    (20) var -> . type ID SEMI
    (77) func -> . FUNCTION type ID eraQuad param body1 fillFunc
    (78) func -> . FUNCTION VOID ID eraQuad param body2 fillFunc
    (37) ifelse -> . IF texp gotoQuadIf THEN bloque_use fill_if
    (40) while -> . WHILE gotoQuadWhile LPAREN aexp RPAREN gotofQuadWhile DO bloque_use fill_while
    (33) forloop -> . FOR asignavar forJump texp forQuad DO bloque_use fill_for
    (28) write -> . OUT LPAREN write_aux RPAREN SEMI
    (49) read -> . GET LPAREN read_aux RPAREN
    (86) fun_esp -> . draw_line
    (44) cvar -> . ID
    (45) cvar -> . ID LBRACKET expr RBRACKET
    (75) cfunc -> . ID LPAREN cvar RPAREN SEMI
    (76) cfunc -> . ID LPAREN RPAREN SEMI
    (21) type -> . INT
    (22) type -> . FLOAT
    (23) type -> . CHAR
    (88) draw_line -> . DRAW CTEI CTEI CTEI CTEI

    MAIN            reduce using rule 89 (empty -> .)
    RBRACE          reduce using rule 89 (empty -> .)
    RETURN          reduce using rule 89 (empty -> .)
    ID              shift and go to state 5
    FUNCTION        shift and go to state 24
    IF              shift and go to state 25
    WHILE           shift and go to state 26
    FOR             shift and go to state 27
    OUT             shift and go to state 28
    GET             shift and go to state 29
    INT             shift and go to state 31
    FLOAT           shift and go to state 32
    CHAR            shift and go to state 33
    DRAW            shift and go to state 34

    estatuto                       shift and go to state 7
    bloque                         shift and go to state 40
    empty                          shift and go to state 8
    asigna                         shift and go to state 9
    asignavar                      shift and go to state 10
    asignaarr                      shift and go to state 11
    vararr                         shift and go to state 12
    var                            shift and go to state 13
    func                           shift and go to state 14
    ifelse                         shift and go to state 15
    while                          shift and go to state 16
    forloop                        shift and go to state 17
    write                          shift and go to state 18
    read                           shift and go to state 19
    fun_esp                        shift and go to state 20
    cvar                           shift and go to state 21
    cfunc                          shift and go to state 22
    type                           shift and go to state 23
    draw_line                      shift and go to state 30

state 8

    (5) bloque -> empty .

    MAIN            reduce using rule 5 (bloque -> empty .)
    RBRACE          reduce using rule 5 (bloque -> empty .)
    RETURN          reduce using rule 5 (bloque -> empty .)


state 9

    (6) estatuto -> asigna .

    ID              reduce using rule 6 (estatuto -> asigna .)
    FUNCTION        reduce using rule 6 (estatuto -> asigna .)
    IF              reduce using rule 6 (estatuto -> asigna .)
    WHILE           reduce using rule 6 (estatuto -> asigna .)
    FOR             reduce using rule 6 (estatuto -> asigna .)
    OUT             reduce using rule 6 (estatuto -> asigna .)
    GET             reduce using rule 6 (estatuto -> asigna .)
    INT             reduce using rule 6 (estatuto -> asigna .)
    FLOAT           reduce using rule 6 (estatuto -> asigna .)
    CHAR            reduce using rule 6 (estatuto -> asigna .)
    DRAW            reduce using rule 6 (estatuto -> asigna .)
    MAIN            reduce using rule 6 (estatuto -> asigna .)
    RBRACE          reduce using rule 6 (estatuto -> asigna .)
    RETURN          reduce using rule 6 (estatuto -> asigna .)


state 10

    (7) estatuto -> asignavar .

    ID              reduce using rule 7 (estatuto -> asignavar .)
    FUNCTION        reduce using rule 7 (estatuto -> asignavar .)
    IF              reduce using rule 7 (estatuto -> asignavar .)
    WHILE           reduce using rule 7 (estatuto -> asignavar .)
    FOR             reduce using rule 7 (estatuto -> asignavar .)
    OUT             reduce using rule 7 (estatuto -> asignavar .)
    GET             reduce using rule 7 (estatuto -> asignavar .)
    INT             reduce using rule 7 (estatuto -> asignavar .)
    FLOAT           reduce using rule 7 (estatuto -> asignavar .)
    CHAR            reduce using rule 7 (estatuto -> asignavar .)
    DRAW            reduce using rule 7 (estatuto -> asignavar .)
    MAIN            reduce using rule 7 (estatuto -> asignavar .)
    RBRACE          reduce using rule 7 (estatuto -> asignavar .)
    RETURN          reduce using rule 7 (estatuto -> asignavar .)


state 11

    (8) estatuto -> asignaarr .

    ID              reduce using rule 8 (estatuto -> asignaarr .)
    FUNCTION        reduce using rule 8 (estatuto -> asignaarr .)
    IF              reduce using rule 8 (estatuto -> asignaarr .)
    WHILE           reduce using rule 8 (estatuto -> asignaarr .)
    FOR             reduce using rule 8 (estatuto -> asignaarr .)
    OUT             reduce using rule 8 (estatuto -> asignaarr .)
    GET             reduce using rule 8 (estatuto -> asignaarr .)
    INT             reduce using rule 8 (estatuto -> asignaarr .)
    FLOAT           reduce using rule 8 (estatuto -> asignaarr .)
    CHAR            reduce using rule 8 (estatuto -> asignaarr .)
    DRAW            reduce using rule 8 (estatuto -> asignaarr .)
    MAIN            reduce using rule 8 (estatuto -> asignaarr .)
    RBRACE          reduce using rule 8 (estatuto -> asignaarr .)
    RETURN          reduce using rule 8 (estatuto -> asignaarr .)


state 12

    (9) estatuto -> vararr .

    ID              reduce using rule 9 (estatuto -> vararr .)
    FUNCTION        reduce using rule 9 (estatuto -> vararr .)
    IF              reduce using rule 9 (estatuto -> vararr .)
    WHILE           reduce using rule 9 (estatuto -> vararr .)
    FOR             reduce using rule 9 (estatuto -> vararr .)
    OUT             reduce using rule 9 (estatuto -> vararr .)
    GET             reduce using rule 9 (estatuto -> vararr .)
    INT             reduce using rule 9 (estatuto -> vararr .)
    FLOAT           reduce using rule 9 (estatuto -> vararr .)
    CHAR            reduce using rule 9 (estatuto -> vararr .)
    DRAW            reduce using rule 9 (estatuto -> vararr .)
    MAIN            reduce using rule 9 (estatuto -> vararr .)
    RBRACE          reduce using rule 9 (estatuto -> vararr .)
    RETURN          reduce using rule 9 (estatuto -> vararr .)


state 13

    (10) estatuto -> var .

    ID              reduce using rule 10 (estatuto -> var .)
    FUNCTION        reduce using rule 10 (estatuto -> var .)
    IF              reduce using rule 10 (estatuto -> var .)
    WHILE           reduce using rule 10 (estatuto -> var .)
    FOR             reduce using rule 10 (estatuto -> var .)
    OUT             reduce using rule 10 (estatuto -> var .)
    GET             reduce using rule 10 (estatuto -> var .)
    INT             reduce using rule 10 (estatuto -> var .)
    FLOAT           reduce using rule 10 (estatuto -> var .)
    CHAR            reduce using rule 10 (estatuto -> var .)
    DRAW            reduce using rule 10 (estatuto -> var .)
    MAIN            reduce using rule 10 (estatuto -> var .)
    RBRACE          reduce using rule 10 (estatuto -> var .)
    RETURN          reduce using rule 10 (estatuto -> var .)


state 14

    (11) estatuto -> func .

    ID              reduce using rule 11 (estatuto -> func .)
    FUNCTION        reduce using rule 11 (estatuto -> func .)
    IF              reduce using rule 11 (estatuto -> func .)
    WHILE           reduce using rule 11 (estatuto -> func .)
    FOR             reduce using rule 11 (estatuto -> func .)
    OUT             reduce using rule 11 (estatuto -> func .)
    GET             reduce using rule 11 (estatuto -> func .)
    INT             reduce using rule 11 (estatuto -> func .)
    FLOAT           reduce using rule 11 (estatuto -> func .)
    CHAR            reduce using rule 11 (estatuto -> func .)
    DRAW            reduce using rule 11 (estatuto -> func .)
    MAIN            reduce using rule 11 (estatuto -> func .)
    RBRACE          reduce using rule 11 (estatuto -> func .)
    RETURN          reduce using rule 11 (estatuto -> func .)


state 15

    (12) estatuto -> ifelse .

    ID              reduce using rule 12 (estatuto -> ifelse .)
    FUNCTION        reduce using rule 12 (estatuto -> ifelse .)
    IF              reduce using rule 12 (estatuto -> ifelse .)
    WHILE           reduce using rule 12 (estatuto -> ifelse .)
    FOR             reduce using rule 12 (estatuto -> ifelse .)
    OUT             reduce using rule 12 (estatuto -> ifelse .)
    GET             reduce using rule 12 (estatuto -> ifelse .)
    INT             reduce using rule 12 (estatuto -> ifelse .)
    FLOAT           reduce using rule 12 (estatuto -> ifelse .)
    CHAR            reduce using rule 12 (estatuto -> ifelse .)
    DRAW            reduce using rule 12 (estatuto -> ifelse .)
    MAIN            reduce using rule 12 (estatuto -> ifelse .)
    RBRACE          reduce using rule 12 (estatuto -> ifelse .)
    RETURN          reduce using rule 12 (estatuto -> ifelse .)


state 16

    (13) estatuto -> while .

    ID              reduce using rule 13 (estatuto -> while .)
    FUNCTION        reduce using rule 13 (estatuto -> while .)
    IF              reduce using rule 13 (estatuto -> while .)
    WHILE           reduce using rule 13 (estatuto -> while .)
    FOR             reduce using rule 13 (estatuto -> while .)
    OUT             reduce using rule 13 (estatuto -> while .)
    GET             reduce using rule 13 (estatuto -> while .)
    INT             reduce using rule 13 (estatuto -> while .)
    FLOAT           reduce using rule 13 (estatuto -> while .)
    CHAR            reduce using rule 13 (estatuto -> while .)
    DRAW            reduce using rule 13 (estatuto -> while .)
    MAIN            reduce using rule 13 (estatuto -> while .)
    RBRACE          reduce using rule 13 (estatuto -> while .)
    RETURN          reduce using rule 13 (estatuto -> while .)


state 17

    (14) estatuto -> forloop .

    ID              reduce using rule 14 (estatuto -> forloop .)
    FUNCTION        reduce using rule 14 (estatuto -> forloop .)
    IF              reduce using rule 14 (estatuto -> forloop .)
    WHILE           reduce using rule 14 (estatuto -> forloop .)
    FOR             reduce using rule 14 (estatuto -> forloop .)
    OUT             reduce using rule 14 (estatuto -> forloop .)
    GET             reduce using rule 14 (estatuto -> forloop .)
    INT             reduce using rule 14 (estatuto -> forloop .)
    FLOAT           reduce using rule 14 (estatuto -> forloop .)
    CHAR            reduce using rule 14 (estatuto -> forloop .)
    DRAW            reduce using rule 14 (estatuto -> forloop .)
    MAIN            reduce using rule 14 (estatuto -> forloop .)
    RBRACE          reduce using rule 14 (estatuto -> forloop .)
    RETURN          reduce using rule 14 (estatuto -> forloop .)


state 18

    (15) estatuto -> write .

    ID              reduce using rule 15 (estatuto -> write .)
    FUNCTION        reduce using rule 15 (estatuto -> write .)
    IF              reduce using rule 15 (estatuto -> write .)
    WHILE           reduce using rule 15 (estatuto -> write .)
    FOR             reduce using rule 15 (estatuto -> write .)
    OUT             reduce using rule 15 (estatuto -> write .)
    GET             reduce using rule 15 (estatuto -> write .)
    INT             reduce using rule 15 (estatuto -> write .)
    FLOAT           reduce using rule 15 (estatuto -> write .)
    CHAR            reduce using rule 15 (estatuto -> write .)
    DRAW            reduce using rule 15 (estatuto -> write .)
    MAIN            reduce using rule 15 (estatuto -> write .)
    RBRACE          reduce using rule 15 (estatuto -> write .)
    RETURN          reduce using rule 15 (estatuto -> write .)


state 19

    (16) estatuto -> read .

    ID              reduce using rule 16 (estatuto -> read .)
    FUNCTION        reduce using rule 16 (estatuto -> read .)
    IF              reduce using rule 16 (estatuto -> read .)
    WHILE           reduce using rule 16 (estatuto -> read .)
    FOR             reduce using rule 16 (estatuto -> read .)
    OUT             reduce using rule 16 (estatuto -> read .)
    GET             reduce using rule 16 (estatuto -> read .)
    INT             reduce using rule 16 (estatuto -> read .)
    FLOAT           reduce using rule 16 (estatuto -> read .)
    CHAR            reduce using rule 16 (estatuto -> read .)
    DRAW            reduce using rule 16 (estatuto -> read .)
    MAIN            reduce using rule 16 (estatuto -> read .)
    RBRACE          reduce using rule 16 (estatuto -> read .)
    RETURN          reduce using rule 16 (estatuto -> read .)


state 20

    (17) estatuto -> fun_esp .

    ID              reduce using rule 17 (estatuto -> fun_esp .)
    FUNCTION        reduce using rule 17 (estatuto -> fun_esp .)
    IF              reduce using rule 17 (estatuto -> fun_esp .)
    WHILE           reduce using rule 17 (estatuto -> fun_esp .)
    FOR             reduce using rule 17 (estatuto -> fun_esp .)
    OUT             reduce using rule 17 (estatuto -> fun_esp .)
    GET             reduce using rule 17 (estatuto -> fun_esp .)
    INT             reduce using rule 17 (estatuto -> fun_esp .)
    FLOAT           reduce using rule 17 (estatuto -> fun_esp .)
    CHAR            reduce using rule 17 (estatuto -> fun_esp .)
    DRAW            reduce using rule 17 (estatuto -> fun_esp .)
    MAIN            reduce using rule 17 (estatuto -> fun_esp .)
    RBRACE          reduce using rule 17 (estatuto -> fun_esp .)
    RETURN          reduce using rule 17 (estatuto -> fun_esp .)


state 21

    (18) estatuto -> cvar .

    ID              reduce using rule 18 (estatuto -> cvar .)
    FUNCTION        reduce using rule 18 (estatuto -> cvar .)
    IF              reduce using rule 18 (estatuto -> cvar .)
    WHILE           reduce using rule 18 (estatuto -> cvar .)
    FOR             reduce using rule 18 (estatuto -> cvar .)
    OUT             reduce using rule 18 (estatuto -> cvar .)
    GET             reduce using rule 18 (estatuto -> cvar .)
    INT             reduce using rule 18 (estatuto -> cvar .)
    FLOAT           reduce using rule 18 (estatuto -> cvar .)
    CHAR            reduce using rule 18 (estatuto -> cvar .)
    DRAW            reduce using rule 18 (estatuto -> cvar .)
    MAIN            reduce using rule 18 (estatuto -> cvar .)
    RBRACE          reduce using rule 18 (estatuto -> cvar .)
    RETURN          reduce using rule 18 (estatuto -> cvar .)


state 22

    (19) estatuto -> cfunc .

    ID              reduce using rule 19 (estatuto -> cfunc .)
    FUNCTION        reduce using rule 19 (estatuto -> cfunc .)
    IF              reduce using rule 19 (estatuto -> cfunc .)
    WHILE           reduce using rule 19 (estatuto -> cfunc .)
    FOR             reduce using rule 19 (estatuto -> cfunc .)
    OUT             reduce using rule 19 (estatuto -> cfunc .)
    GET             reduce using rule 19 (estatuto -> cfunc .)
    INT             reduce using rule 19 (estatuto -> cfunc .)
    FLOAT           reduce using rule 19 (estatuto -> cfunc .)
    CHAR            reduce using rule 19 (estatuto -> cfunc .)
    DRAW            reduce using rule 19 (estatuto -> cfunc .)
    MAIN            reduce using rule 19 (estatuto -> cfunc .)
    RBRACE          reduce using rule 19 (estatuto -> cfunc .)
    RETURN          reduce using rule 19 (estatuto -> cfunc .)


state 23

    (46) vararr -> type . ID LBRACKET lit RBRACKET SEMI
    (47) vararr -> type . ID LBRACKET expr RBRACKET SEMI
    (20) var -> type . ID SEMI

    ID              shift and go to state 41


state 24

    (77) func -> FUNCTION . type ID eraQuad param body1 fillFunc
    (78) func -> FUNCTION . VOID ID eraQuad param body2 fillFunc
    (21) type -> . INT
    (22) type -> . FLOAT
    (23) type -> . CHAR

    VOID            shift and go to state 43
    INT             shift and go to state 31
    FLOAT           shift and go to state 32
    CHAR            shift and go to state 33

    type                           shift and go to state 42

state 25

    (37) ifelse -> IF . texp gotoQuadIf THEN bloque_use fill_if
    (58) texp -> . expr
    (59) texp -> . expr LT expr
    (60) texp -> . expr GT expr
    (61) texp -> . expr LE expr
    (62) texp -> . expr GE expr
    (63) texp -> . expr EQ expr
    (64) texp -> . expr NE expr
    (65) expr -> . term
    (66) expr -> . expr PLUS term
    (67) expr -> . expr MINUS term
    (68) term -> . fact
    (69) term -> . term TIMES fact
    (70) term -> . term DIVIDE fact
    (71) fact -> . LPAREN aexp RPAREN
    (72) fact -> . lit
    (73) fact -> . cvar
    (74) fact -> . cfunc
    (26) lit -> . CTEI
    (27) lit -> . CTEF
    (44) cvar -> . ID
    (45) cvar -> . ID LBRACKET expr RBRACKET
    (75) cfunc -> . ID LPAREN cvar RPAREN SEMI
    (76) cfunc -> . ID LPAREN RPAREN SEMI

    LPAREN          shift and go to state 48
    CTEI            shift and go to state 52
    CTEF            shift and go to state 53
    ID              shift and go to state 54

    texp                           shift and go to state 44
    expr                           shift and go to state 45
    term                           shift and go to state 46
    fact                           shift and go to state 47
    lit                            shift and go to state 49
    cvar                           shift and go to state 50
    cfunc                          shift and go to state 51

state 26

    (40) while -> WHILE . gotoQuadWhile LPAREN aexp RPAREN gotofQuadWhile DO bloque_use fill_while
    (41) gotoQuadWhile -> .

    LPAREN          reduce using rule 41 (gotoQuadWhile -> .)

    gotoQuadWhile                  shift and go to state 55

state 27

    (33) forloop -> FOR . asignavar forJump texp forQuad DO bloque_use fill_for
    (25) asignavar -> . ID EQUALS expr SEMI

    ID              shift and go to state 57

    asignavar                      shift and go to state 56

state 28

    (28) write -> OUT . LPAREN write_aux RPAREN SEMI

    LPAREN          shift and go to state 58


state 29

    (49) read -> GET . LPAREN read_aux RPAREN

    LPAREN          shift and go to state 59


state 30

    (86) fun_esp -> draw_line .

    ID              reduce using rule 86 (fun_esp -> draw_line .)
    FUNCTION        reduce using rule 86 (fun_esp -> draw_line .)
    IF              reduce using rule 86 (fun_esp -> draw_line .)
    WHILE           reduce using rule 86 (fun_esp -> draw_line .)
    FOR             reduce using rule 86 (fun_esp -> draw_line .)
    OUT             reduce using rule 86 (fun_esp -> draw_line .)
    GET             reduce using rule 86 (fun_esp -> draw_line .)
    INT             reduce using rule 86 (fun_esp -> draw_line .)
    FLOAT           reduce using rule 86 (fun_esp -> draw_line .)
    CHAR            reduce using rule 86 (fun_esp -> draw_line .)
    DRAW            reduce using rule 86 (fun_esp -> draw_line .)
    MAIN            reduce using rule 86 (fun_esp -> draw_line .)
    RBRACE          reduce using rule 86 (fun_esp -> draw_line .)
    RETURN          reduce using rule 86 (fun_esp -> draw_line .)


state 31

    (21) type -> INT .

    ID              reduce using rule 21 (type -> INT .)


state 32

    (22) type -> FLOAT .

    ID              reduce using rule 22 (type -> FLOAT .)


state 33

    (23) type -> CHAR .

    ID              reduce using rule 23 (type -> CHAR .)


state 34

    (88) draw_line -> DRAW . CTEI CTEI CTEI CTEI

    CTEI            shift and go to state 60


state 35

    (24) asigna -> ID EQUALS . lit SEMI
    (25) asignavar -> ID EQUALS . expr SEMI
    (26) lit -> . CTEI
    (27) lit -> . CTEF
    (65) expr -> . term
    (66) expr -> . expr PLUS term
    (67) expr -> . expr MINUS term
    (68) term -> . fact
    (69) term -> . term TIMES fact
    (70) term -> . term DIVIDE fact
    (71) fact -> . LPAREN aexp RPAREN
    (72) fact -> . lit
    (73) fact -> . cvar
    (74) fact -> . cfunc
    (44) cvar -> . ID
    (45) cvar -> . ID LBRACKET expr RBRACKET
    (75) cfunc -> . ID LPAREN cvar RPAREN SEMI
    (76) cfunc -> . ID LPAREN RPAREN SEMI

    CTEI            shift and go to state 52
    CTEF            shift and go to state 53
    LPAREN          shift and go to state 48
    ID              shift and go to state 54

    lit                            shift and go to state 61
    expr                           shift and go to state 62
    term                           shift and go to state 46
